Fix bug (Glitch attempt 3): Instead of 2 thirds that benefit too much the last card in long phones, use an antiglitch boolean to check if isAtBottom where a different threshold of pixels is used for entereing vs exiting bottom state

--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -25,7 +25,7 @@
     display: grid;
     grid-template-columns: 1fr; // 👉 Mobile default: 1 column
     gap: 2rem 0;
-    background-color: yellowgreen; // TODO: REMOVE this line
+    background-color: purple; // TODO: REMOVE this line
 
     @include blog-card-values("a");
     
